--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
     </nav>
 </header>
 <main>
-    <section class="px-10 md:px-20 mb-40 h-fit relative">
+
+    <section class="px-5 sm:px-10 md:px-20 mb-40 h-fit relative">
         <main class="relative rounded-hundred bg-brandDarkGreen1x px-10 lg:px-24 pt-32 lg:py-32  h-fit flex flex-col gap-6">
             <div class="space-y-6">
                 <div class="text-4xl sm:text-5xl md:text-7xl container font-milligramBold700 space-y-2">
@@ -65,9 +66,9 @@
                 <p>hi</p>
             </div> -->
     </section>
-    <section class="pt-35 overflow-x-hidden h-fit px-10 md:px-20 space-y-32 pb-8 flex flex-col justify-center">
+    <section class="pt-36 overflow-x-hidden h-fit px-10 md:px-20 space-y-20 md:space-y-32 pb-8 flex flex-col justify-center">
         <section class="relative py-5 h-fit flex flex-row flex-wrap items-start gap-10 lg:gap-5">
-            <div class="w-2/3 lg:w-twentyFivePercent space-y-4">
+            <div class="w-full sm:w-2/3 lg:w-twentyFivePercent space-y-4">
                 <h1 class="font-moderat font-bold text-3xl text-brandDarkGreen2x">353 million</h1>
                 <p class="font-moderat font-normal text-brandGray2x text-md">tonnes of waste generated globally are plastics</p>
                 <div class="font-moderat font-normal flex flex-row items-center gap-2">
@@ -78,7 +79,7 @@
                     </svg>
                 </div>
             </div>
-            <div class="w-2/3 lg:w-twentyFivePercent space-y-4">
+            <div class="w-full sm:w-2/3 lg:w-twentyFivePercent space-y-4">
                 <h1 class="font-moderat font-bold text-3xl text-brandDarkGreen2x">32 million</h1>
                 <p class="font-moderat font-normal text-brandGray2x text-md">tonnes of plastic waste generated in Nigeria can be reused</p>
                 <div class="font-moderat font-normal flex flex-row items-center gap-2">
@@ -89,7 +90,7 @@
                     </svg>
                 </div>
             </div>
-            <div class="w-2/3 lg:w-twentyFivePercent space-y-4">
+            <div class="w-full sm:w-2/3 lg:w-twentyFivePercent space-y-4">
                 <h1 class="font-moderat font-bold text-3xl text-brandDarkGreen2x">100,000</h1>
                 <p class="font-moderat font-normal text-brandGray2x text-md">
                     shoppers using ShoppersBag App monthly can save 13 tonnes of single-use plastic from entering the planet
@@ -102,11 +103,11 @@
                     </svg>
                 </div>        
             </div>
-            <div class="sm:absolute -right-28 md:-right-36 top-2">
-                <div class="flex flex-row items-center justify-center gap-3 w-80 aspect-square rounded-fiftyPercent border border-brandGray26x">
-                    <p class="font-avenirRegular text-brandPurple1x text-lg">Watch video</p>
+            <div class="translate-x-20 sm:absolute -right-28 md:-right-36 top-2">
+                <div class="flex flex-row items-center justify-center gap-3 w-60 sm:w-80 aspect-square rounded-fiftyPercent border border-brandGray26x">
+                    <p class="font-avenirRegular text-brandPurple1x md:text-lg">Watch video</p>
                     <button type="button">                
-                        <img src="./assets/images/icons/vuesax/play-cricle.svg" alt="play video">
+                        <img src="./assets/images/icons/vuesax/play-cricle.svg" alt="play video" class="w-10 h-10">
                     </button>
                 </div>
             </div>
@@ -134,8 +135,8 @@
     </section>
     <section class="py-20 px-10 md:px-20 flex flex-col gap-10 items-center box-border h-fit ">
         <div class="font-avenirHeavy space-y-4 text-black text-center">
-            <h1 class="text-4xl">How ShoppersBag Works</h1>
-            <h3 class="text-2xl" id="how_header">For shoppers</h3>
+            <h1 class="text-3xl lg:text-4xl">How ShoppersBag Works</h1>
+            <h3 class="text-xl lg:text-2xl" id="how_header">For shoppers</h3>
             <h3 class="text-base font-avenirLight text-brandGray2x max-w-xs md:max-w-xl" id="how_text">Use ShoppersBag to shop, earn and save the planet</h3>
         </div>
         <section class="w-full xl:px-20">
@@ -181,7 +182,7 @@
                                     <img loading="lazy" src="./assets/images/icons/social/GooglePlay-blue.png" alt="next" class="">
                                 </a>
                             </div>
-                            <div class="slide-btn-wrap absolute flex flex-row items-center gap-10 left-fiftyPercent -translate-x-fiftyPercent bottom-12 z-20">
+                            <div class="slide-btn-wrap absolute flex flex-row items-center gap-10 left-fiftyPercent -translate-x-fiftyPercent bottom-6 lg:bottom-12 z-20">
                                 <button type="button" class="h-8 lg:h-14 w-8 lg:w-14 bg-brandPurple2x rounded-fifty flex flex-row items-center justify-center slide-btn" data-slide-control="backward">
                                     <p class="hidden">Previous</p>
                                     <img loading="lazy" src="./assets/images/icons/vuesax/arrow-left.svg" alt="previous" class="h-6 lg:h-9 w-6 lg:w-9">
@@ -386,8 +387,8 @@
             <img loading="lazy" src="./assets/images/patterns/HeroSectionLeftShapes.61b72bd3 1.png" alt="">
         </div>
     </section>
-    <section class="px-10 py-20 md:p-20">
-        <main class="relative rounded-hundred bg-brandDarkGreen1x px-24 py-20 h-fit flex flex-col gap-6 text-center">
+    <section class="px-5 sm:px-10 md:px-20 py-20 ">
+        <main class="relative rounded-hundred bg-brandDarkGreen1x px-2 md:px-24 py-20 h-fit flex flex-col gap-6 text-center">
             <h1 class="font-milligramBold700 text-white text-3xl md:text-6xl">Want to try <a  href="#" class="text-brandGreen1x underline">ShoppersBag</a>?</h1>
             <p class="font-avenirLight text-xl md:text-3xl text-white">Now it's <span class="text-brandGreen1x">time</span> to imbibe a <span class="text-brandPurple1x">sustainable</span> lifestyle</p>
             <div class="flex flex-row items-center gap-5 mx-auto py-3">
@@ -398,46 +399,46 @@
                     <img loading="lazy" src="./assets/images/icons/social/GooglePlay-purple.png" alt="app store">
                 </a>
             </div>
-            <p class="font-avenirLight text-base md:text-xl text-white">You earn rewards whenever you scan QR code to activate your shopping bag</p>
+            <p class="w-ninetyFivePercent sm:w-full font-avenirLight text-base md:text-xl text-white">You earn rewards whenever you scan QR code to activate your shopping bag</p>
         </main>
     </section>
-    <section class="w-full grid grid-rows-2 px-20 divide-y divide-brandGray10x">
+    <section class="w-full grid grid-rows-2 px-2 md:px-20 divide-y divide-brandGray10x">
         <div class=" grid grid-cols-3 w-full divide-x divide-brandGray10x">
-            <div class="w-full pl-5 py-20 space-y-2">
-                <p class='font-avenirRegular text-2xl'>Number of</p>
-                <h1 class='font-avenirHeavy text-2xl'>ShoppersBag in Circulation</h1>
+            <div class="w-full px-2 sm:pl-5 py-20 space-y-2">
+                <p class='font-avenirRegular text-sm sm:text-base md:text-2xl'>Number of</p>
+                <h1 class='font-avenirHeavy text-sm sm:text-base md:text-2xl'>ShoppersBag in Circulation</h1>
             </div>
-            <div class="w-full pl-5 py-20 space-y-2">
-                <p class='font-avenirRegular text-2xl'>Number of</p>
-                <h1 class='font-avenirHeavy text-2xl'>Partnering Brands</h1>
+            <div class="w-full px-2 sm:pl-5 py-20 space-y-2">
+                <p class='font-avenirRegular text-sm sm:text-base md:text-2xl'>Number of</p>
+                <h1 class='font-avenirHeavy text-sm sm:text-base md:text-2xl'>Partnering Brands</h1>
             </div>
-            <div class="w-full pl-5 py-20 space-y-2">
-                <p class='font-avenirRegular text-2xl'>Number of</p>
-                <h1 class='font-avenirHeavy text-2xl'>Women and Girls Impacted</h1>
+            <div class="w-full px-2 sm:pl-5 py-20 space-y-2">
+                <p class='font-avenirRegular text-sm sm:text-base md:text-2xl'>Number of</p>
+                <h1 class='font-avenirHeavy text-sm sm:text-base md:text-2xl'>Women and Girls Impacted</h1>
             </div>
         </div>
         <div class="grid grid-cols-3 w-full divide-x divide-brandGray10x">
-            <div class="w-full pl-5 py-20 space-y-2">
-                <p class='font-avenirRegular text-2xl'>Number of</p>
-                <h1 class='font-avenirHeavy text-2xl'>Single-use Plastic Reduction</h1>
+            <div class="w-full px-2 sm:pl-5 py-20 space-y-2">
+                <p class='font-avenirRegular text-sm sm:text-base md:text-2xl'>Number of</p>
+                <h1 class='font-avenirHeavy text-sm sm:text-base md:text-2xl'>Single-use Plastic Reduction</h1>
             </div>
-            <div class="w-full pl-5 py-20 space-y-2">
-                <p class='font-avenirRegular text-2xl'>Number of</p>
-                <h1 class='font-avenirHeavy text-2xl'>Eco-friendly Bag Producers</h1>
+            <div class="w-full px-2 sm:pl-5 py-20 space-y-2">
+                <p class='font-avenirRegular text-sm sm:text-base md:text-2xl'>Number of</p>
+                <h1 class='font-avenirHeavy text-sm sm:text-base md:text-2xl'>Eco-friendly Bag Producers</h1>
             </div>
-            <div class="w-full pl-5 py-20 space-y-2">
-                <p class='font-avenirRegular text-2xl'>Number of</p>
-                <h1 class='font-avenirHeavy text-2xl'>Partnering Brands</h1>
+            <div class="w-full px-2 sm:pl-5 py-20 space-y-2">
+                <p class='font-avenirRegular text-sm sm:text-base md:text-2xl'>Number of</p>
+                <h1 class='font-avenirHeavy text-sm sm:text-base md:text-2xl'>Partnering Brands</h1>
             </div>
         </div>
     </section>
-    <section class="px-10 md:px-20 pt-40 mx-auto w-ninetyPercent lg:w-seventyPercent" >
+    <section class="px-10 md:px-20 pt-28 md:pt-40 mx-auto w-full lg:w-seventyPercent" >
         <h1 class="font-avenirHeavy text-center text-2xl md:text-4xl">Frequently Asked Questions</h1>
         <main class="py-16" id="index_faq_wrap">
            
         </main>
         <div class="w-full text-right">
-            <a href="./faq.html" class="text-brandRed1x text-xl font-avenirHeavy underline text-right w-fit">FIND MORE ANSWERS</a>
+            <a href="./faq.html" class="text-brandRed1x text-base md:text-xl font-avenirHeavy underline text-right w-fit">FIND MORE ANSWERS</a>
         </div>
     </section>
 </main>
