--- a/about-us.html
+++ b/about-us.html
@@ -34,10 +34,10 @@
     </nav>
 </header>
 <main>
-    <section class="px-10 md:px-20 h-fit relative">
-        <main class="relative rounded-hundred bg-brandDarkGreen1x px-10 lg:px-24 py-32  h-fit flex flex-col gap-6">
+    <section class="px-5 sm:px-10 md:px-20 h-fit relative">
+        <main class="relative rounded-hundred bg-brandDarkGreen1x sm:px-10 lg:px-24 py-32  h-fit flex flex-col gap-6">
             <div class="space-y-6 text-center">
-                <h1 class="font-milligramBold700 text-white text-3xl sm:text-4xl md:text-5xl lg:text-7xl">
+                <h1 class="font-milligramBold700 text-white text-2xl sm:text-4xl md:text-5xl lg:text-7xl">
                     Promoting a sustainable environment
                 </h1>
                 <p class="font-moderat font-light text-white text-lg sm:text-2xl lg:text-2xl px-tenPercent">
@@ -45,7 +45,7 @@
                     is a digital technology that drives the reduction in production, usage, and disposal of single-use plastics in the retail value chain. 
                     <span class="text-brandPurple1x">Our mission </span>
                     is to support shoppers to maintain a 
-                    <span class="text0">sustainability lifestyle </span>
+                    <span class="">sustainability lifestyle </span>
                     and improve the livelihoods of 
                     <span class="text-brandBlue5x">women and girls.</span>
                 </p>
@@ -59,13 +59,13 @@
             <h1 class="text-4xl font-milligramBold700">
                 A growth engine for plastic <br> reduction, reuse and recycling
             </h1>
-            <p class="text-xl text-brandGray14x font-avenirRegular">
+            <p class="lg:text-xl text-brandGray14x font-avenirRegular">
                 We created the ShoppersBag App for shoppers to earn rewards on every usage of reusable shopping bags in stores and malls - working with Ecofriendly Bag Producers, Brands, Stores and Malls to drive sustainability in Africa's Retail Value Chain.
             </p>
-            <p class="text-xl text-brandGray14x font-avenirRegular">
+            <p class="lg:text-xl text-brandGray14x font-avenirRegular">
                 The adoption of ShoppersBag to increase the usage of alternative reusable, biodegradable, and recyclable shopping bags; will support shoppers to maintain a sustainable lifestyle aimed at reducing the number of single-use plastic bags in circulation, and promote a sustainable environment that empowers women and girls to improve their livelihoods. 
             </p>
-            <p class="text-xl text-brandGray14x font-avenirRegular">
+            <p class="lg:text-xl text-brandGray14x font-avenirRegular">
                 As eco-conscious individuals and business owners ourselves, we draw inspiration from a vision of millions of exceptional shoppers across the continent who desire to shop all their needs, earn from simple tasks, while saving the planet. We believe that on our journey, shoppers in Africa will stay loyal to the best brands on the planet, who are committed to driving Sustainability in the Retail Value Chain. Building that sustainable society, free from plastic and single-use plastics pollution.            
             </p>
         </div>
@@ -73,76 +73,74 @@
             <img src="./assets/images/reduce-reuse-recycle.jpg" alt="reduce-reuse-recycle.jpg">
         </div>
     </section>
-    <section class="relative flex flex-col lg:flex-row item-center gap-8 bg-brandGray15x pt-8 pb-16 px-10 md:px-20 border-b-12 border-brandGray16x">
-        <div class="w-full lg:w-fiftyPercent space-y-7 p-10 rounded-fifty bg-white">
+    <section id="journey_section" class="overflow-x-auto w-full flex flex-row item-center gap-8 bg-brandGray15x pt-8 pb-16 px-10 md:px-20">
+        <div class="w-fit space-y-7 p-10 rounded-fifty bg-white">
             <h1 class="text-4xl font-milligramBold700">
                 Our Company
             </h1>
-            <p class="text-xl text-brandGray14x font-avenirRegular">
+            <p class="w-307 sm:w-500 lg:text-xl text-brandGray14x font-avenirRegular">
                 ShoppersBag is a product of Well of Science, registered in Nigeria with RC Number: 1657757. With a global footprint, we do the impossible, the unthinkable, and the 
                 unimaginable, taking up one value chain at a time and advancing sustainability across its business processes for the common good of all.
             </p>
-            <p class="text-xl text-brandGray14x font-avenirRegular">
+            <p class="lg:text-xl text-brandGray14x font-avenirRegular">
                 At Well of Science, we provide innovative tech solutions to the environmental and socio-economic problems that haunt our society. We devote our energies and resources to improving the lives and businesses of EVERYONE we come in contact with.
             </p>
-            <p class="text-xl text-brandGray14x font-avenirRegular">
+            <p class="lg:text-xl text-brandGray14x font-avenirRegular">
                 We pride ourselves on taking a 360-view of every issue before attempting to tackle it. In this short period of existence, we have built sustainability as a competitive advantage embedding it as a core value.            
             </p>
         </div>
-        <div class="min-h-full flex flex-col justify-between w-full lg:w-fiftyPercent">
+        <div class="min-h-full flex flex-col justify-between w-full lg:w-fit">
             <h1 class="font-avenirHeavy text-2xl text-block">Our journey so far</h1>
-            <div class="overflow-x-auto py-5">
-                <div class="relative border-b-12 overflow-x-hidden w-fit py-32 border-brandBlue1x flex flex-row gap-10 items-end">
+                <div class="relative border-b-12 w-fit py-10 border-brandBlue1x flex flex-row gap-10 items-end">
                     <div class="space-y-3 w-307">
-                        <p class="text-xl font-avenirRegular text-brandGray25x">Ideation of ShoppersBag</p>
-                        <h1 class="text-black text-2xl font-avenirHeavy">November, <br/>2021</h1>
+                        <p class="text-base md:text-xl font-avenirRegular text-brandGray25x">Ideation of ShoppersBag</p>
+                        <h1 class="text-black text-lg md:text-2xl font-avenirHeavy">November, <br/>2021</h1>
                     </div>
                     <div class="space-y-3 w-307">
-                        <p class="text-xl font-avenirRegular text-brandGray25x">Selection among the Top 25 Innovations for semi-finalist for Afriplastics Challenge 2022.</p>
-                        <h1 class="text-black text-2xl font-avenirHeavy">February, <br/>2022</h1>
+                        <p class="text-base md:text-xl font-avenirRegular text-brandGray25x">Selection among the Top 25 Innovations for semi-finalist for Afriplastics Challenge 2022.</p>
+                        <h1 class="text-black text-lg md:text-2xl font-avenirHeavy">February, <br/>2022</h1>
                     </div>
                     <div class="space-y-3 w-307">
-                        <p class="text-xl font-avenirRegular text-brandGray25x">Development of ShopperBag Prototype</p>
-                        <h1 class="text-black text-2xl font-avenirHeavy">March, <br/>2022</h1>
+                        <p class="text-base md:text-xl font-avenirRegular text-brandGray25x">Development of ShopperBag Prototype</p>
+                        <h1 class="text-black text-lg md:text-2xl font-avenirHeavy">March, <br/>2022</h1>
                     </div>
                     <div class="space-y-3 w-307">
-                        <p class="text-xl font-avenirRegular text-brandGray25x">Selected among the Top 10 Innovations for the Afriplastics Challenge Finalists 2022.</p>
-                        <h1 class="text-black text-2xl font-avenirHeavy">June, <br/>2022</h1>
+                        <p class="text-base md:text-xl font-avenirRegular text-brandGray25x">Selected among the Top 10 Innovations for the Afriplastics Challenge Finalists 2022.</p>
+                        <h1 class="text-black text-lg md:text-2xl font-avenirHeavy">June, <br/>2022</h1>
                     </div>
                     <div class="space-y-3 w-307">
-                        <p class="text-xl font-avenirRegular text-brandGray25x">Launch of #NaijaZeroPlasticChallenge by ShoppersBag engaging content creators to build a narrative around reduction of single-use plastics in stores and malls.</p>
-                        <h1 class="text-black text-2xl font-avenirHeavy">August, <br/>2022</h1>
+                        <p class="text-base md:text-xl font-avenirRegular text-brandGray25x">Launch of #NaijaZeroPlasticChallenge by ShoppersBag engaging content creators to build a narrative around reduction of single-use plastics in stores and malls.</p>
+                        <h1 class="text-black text-lg md:text-2xl font-avenirHeavy">August, <br/>2022</h1>
                     </div>
                     <div class="space-y-3 w-307">
-                        <p class="text-xl font-avenirRegular text-brandGray25x">Validation/Testing</p>
-                        <h1 class="text-black text-2xl font-avenirHeavy">September, <br/>2022</h1>
+                        <p class="text-base md:text-xl font-avenirRegular text-brandGray25x">Validation/Testing</p>
+                        <h1 class="text-black text-lg md:text-2xl font-avenirHeavy">September, <br/>2022</h1>
                     </div>
                     <div class="space-y-3 w-307">
-                        <p class="text-xl font-avenirRegular text-brandGray25x">Launch of the ShoppersBag's EcoGirl Program to support women and girls in eco-friendly bag making.</p>
-                        <h1 class="text-black text-2xl font-avenirHeavy">September, <br/>2022</h1>
+                        <p class="text-base md:text-xl font-avenirRegular text-brandGray25x">Launch of the ShoppersBag's EcoGirl Program to support women and girls in eco-friendly bag making.</p>
+                        <h1 class="text-black text-lg md:text-2xl font-avenirHeavy">September, <br/>2022</h1>
                     </div>
                     <div class="space-y-3 w-307">
-                        <p class="text-xl font-avenirRegular text-brandGray25x">Launch of the ShoppersBag Mobile App.</p>
-                        <h1 class="text-black text-2xl font-avenirHeavy">November, <br/>2022</h1>
+                        <p class="text-base md:text-xl font-avenirRegular text-brandGray25x">Launch of the ShoppersBag Mobile App.</p>
+                        <h1 class="text-black text-lg md:text-2xl font-avenirHeavy">November, <br/>2022</h1>
                     </div>
                     <div class="space-y-3 w-307">
-                        <p class="text-xl font-avenirRegular text-brandGray25x">ShoppersBag hits 20 major stores and Malls in Lagos, Nigeria.</p>
-                        <h1 class="text-black text-2xl font-avenirHeavy">November, <br/>2022</h1>
+                        <p class="text-base md:text-xl font-avenirRegular text-brandGray25x">ShoppersBag hits 20 major stores and Malls in Lagos, Nigeria.</p>
+                        <h1 class="text-black text-lg md:text-2xl font-avenirHeavy">November, <br/>2022</h1>
                     </div>
                     <div class="space-y-3 w-307">
-                        <p class="text-xl font-avenirRegular text-brandGray25x">Scaling</p>
-                        <h1 class="text-black text-2xl font-avenirHeavy">April, <br/>2023</h1>
+                        <p class="text-base md:text-xl font-avenirRegular text-brandGray25x">Scaling</p>
+                        <h1 class="text-black text-lg md:text-2xl font-avenirHeavy">April, <br/>2023</h1>
                     </div>
                 </div>
-                <div class="w-7 h-7 bg-brandBlue1x rounded-fifty absolute bottom-76px lg:left-fiftyPercent"></div>
+                <!-- <div class="w-7 h-7 bg-brandBlue1x rounded-fifty absolute bottom-76px lg:left-fiftyPercent"></div> -->
             </div>
-        </div>
-        <div class="absolute h-3 w-fortyPercent bg-brandBlue1x left-0 -bottom-3"></div>
+        <!-- <div class="absolute h-3 w-fortyPercent bg-brandBlue1x left-0 -bottom-3"></div> -->
     </section>
-    <section class="py-48 px-10 md:px-20 flex flex-col gap-5 text-center justify-center items-center">
-            <h1 class="font-avenirHeavy text-4xl text-black">SDGs we focus on</h1>
-            <p class="font-avenirRegular text-xl w-3/6 pb-24">We are unreservedly contributing our quota to the realization of all the agendas that make up the SDGs with our focus on:</p>
-            <div class="relative h-fit w-2/3">                
+    <section class="py-20 md:py-48 px-10 md:px-20 flex flex-col gap-5 text-center justify-center items-center">
+            <h1 class="font-avenirHeavy text-2xl md:text-4xl text-black">SDGs we focus on</h1>
+            <p class="font-avenirRegular text-base md:text-xl w-full md:w-3/6 pb-24">We are unreservedly contributing our quota to the realization of all the agendas that make up the SDGs with our focus on:</p>
+            <div class="relative h-fit w-full md:w-2/3">                
                 <img src="./assets/images/sdg-hero.png" alt="sdg" class="z-30 relative">
                 <div class="absolute top-fiftyPercent -translate-y-fiftyPercent rounded-fiftyPercent min-h-full h-oneTwentyPercent bg-brandBlue3x w-eightyPercent left-fiftyPercent -translate-x-fiftyPercent">
                 </div>
@@ -193,12 +191,12 @@
                 </div>
             </div>
        </div>
-       <div class="bg-brandYellow1x px-5 py-1 md:px-10 rounded-hundred flex flex-col md:flex-row items-center gap-16">
+       <div class="bg-brandYellow1x sm:px-5 py-5 sm:py-1 md:px-10 rounded-hundred flex flex-col md:flex-row items-center gap-5 md:gap-16">
            <div class="space-y text-center md:text-right w-full md:w-fortyPercent py-7">
-               <h1 class="font-avenirHeavy text-black text-5xl">Join our team</h1>
+               <h1 class="font-avenirHeavy text-black text-2xl sm:text-5xl">Join our team</h1>
                <a href="#" class="font-avenirHeavy text-xl text-brandRed1x text-right underline">See all available roles</a>
            </div>
-           <div class="w-ninetyPercent h-fit p-5 md:w-sixtyPercent">
+           <div class="w-ninetyPercent h-fit px-5 pb-5 sm:p-5 md:w-sixtyPercent">
                <p class="font-avenirRegular text-left text-xm">Come let's build sustainable solutions that impact the adoption of ShoppersBag in Africa and the world. We have a collaborative work culture that will help harness your skills and accelerate your career growth.</p>
            </div>
        </div>
