--- a/about-us.html
+++ b/about-us.html
@@ -156,39 +156,172 @@
        </div>
        <div class="py-20 lg:w-seventyPercent mx-auto">
             <div class="flex flex-row w-full mx-auto flex-wrap justify-center gap-10 items-center">
-                <div class="py-10 relative">
-                    <img src="./assets/images/team/Ellipse12.png" alt="member" class="max-h-40 about-img cursor-pointer max-w-160px relative z-100">
-                    <div class="absolute md:first-letter:top-fiftyPercent -right-fiftyPercent about-content hidden translate-x-twentyFivePercent sm:translate-x-fiftyPercent md:translate-x-0 top-28 translate-y-8 md:-translate-y-fiftyPercent md:left-28 z-50 rounded-fifty py-20 px-10 md:px-20 md:py-10 w-fit shadow-lg bg-white justify-center">
-                        <div class="block w-350">
-                            <h5 class="text-4xl font-avenirBlack leading-tight font-medium mb-2">Etia Nwaenang - CEO</h5>
-                            <p class="font-avenirRegular text-black text-base mb-4">
+                <div data-modal="about_modal" class="py-10 modal-opener">
+                    <img src="./assets/images/team/etia-nwaenang.png" alt="Etia Nwaenang - CEO" class="h-40 cursor-pointer w-40 rounded-fiftyPercent">                  
+                    <p class="hidden about-person">Etia Nwaenang - CEO</p>
+                    <p class="hidden about-snippet">                            
+                        I oversee the day-to-day execution 
+                        of the ShoppersBag's playbook to 
+                        achieve a plastic-free society and 
+                        lifestyle transformation. My experience 
+                        cut across diverse sectors, arming me with 
+                        the needed toolkits to co-create solutions 
+                        that will grow the circular economy space and 
+                        impact lives and communities. It's a marathon, 
+                        I move.
+                    </p>
+                    <p class="hidden about-linkedin">https://www.linkedin.com</p>
+                </div>
+                <div data-modal="about_modal" class="py-10 modal-opener">
+                    <img src="./assets/images/team/gabriel-edward.png" alt="Gabriel Edward - Data Analytics and Protection Office" class="h-40 cursor-pointer w-40 rounded-fiftyPercent">
+                    <p class="hidden about-person">Gabriel Edward - Data Analytics and Protection Officer</p>
+                    <p class="hidden about-snippet">                            
+                        I wear the social lenses from whence the 
+                        world sees ShoppersBag, daily projecting 
+                        clear-cut messages that reflect our brand. 
+                        While you enjoy the precision, excellence, 
+                        and creativity of our message online, I 
+                        stand behind the scene, with a team of 
+                        super creatives cooking what would be 
+                        called a mouth-watering dish.                    
+                    </p>
+                    <p class="hidden about-linkedin">https://www.linkedin.com</p>
+                </div>
+                <div data-modal="about_modal" class="py-10 modal-opener">
+                    <img src="./assets/images/team/judith-obinna.png" alt="Judith Obinna - Administrative Officer" class="h-40 cursor-pointer w-40 rounded-fiftyPercent">
+                    <p class="hidden about-person">Judith Obinna - Administrative Officer</p>
+                    <p class="hidden about-snippet">                            
+                        I run the daily administrative engines 
+                        required for the smooth workings of 
+                        ShoppersBag to achieve an eco-conscious 
+                        society. As we always say in Nigeria, 
+                        E choke o! But not with ShoppersBag 
+                        productivity engines because it all 
+                        funnels down to outcomes that advance 
+                        the common good.
+                    </p>
+                    <p class="hidden about-linkedin">https://www.linkedin.com</p>
+                </div>
+                <div data-modal="about_modal" class="py-10 modal-opener">
+                    <img src="./assets/images/team/ubong-inyang.png" alt="Ubong Inyang - COO" class="h-40 cursor-pointer w-40 rounded-fiftyPercent">
+                    <p class="hidden about-person">Ubong Inyang - COO</p>
+                    <p class="hidden about-snippet">                            
+                        I am always on the lookout for 
+                        how we can weave ShoppersBag across 
+                        different value chains. My menu list 
+                        includes Operations, Strategy, Innovation 
+                        and Funding. It's super exciting to see 
+                        how the ShoppersBag playbook is evolving, 
+                        and I look forward to saving our planet, 
+                        one ShoppersBag at a time. #LetsGoThere!!!
+                    </p>
+                    <p class="hidden about-linkedin">https://www.linkedin.com</p>
+                </div>
+                <div data-modal="about_modal" class="py-10 modal-opener">
+                    <img src="./assets/images/team/akan-ebong.png" alt="Akan Ebong - Media and Communication Lead" class="h-40 cursor-pointer w-40 rounded-fiftyPercent">
+                    <p class="hidden about-person">Akan Ebong - Media and Communication Lead</p>
+                    <p class="hidden about-snippet">                            
+                        My turf is developing media and 
+                        strengthening communication assets for 
+                        ShoppersBag. As a global brand, ShoppersBag 
+                        is positioned to disrupt the consumer retail 
+                        packaging space, thus needs strategic communication 
+                        to reach both elite and everyday consumers, brands, 
+                        and stores. I am a very confident and sociable 
+                        person, who exudes a likable personality with 
+                        great imagination. I strongly believe in the mantra, 
+                        “WE RISE BY LIFTING OTHERS.”
+                    </p>
+                    <p class="hidden about-linkedin">https://www.linkedin.com</p>
+                </div>
+                <div data-modal="about_modal" class="py-10 modal-opener">
+                    <img src="./assets/images/team/mbetobong-john.png" alt="Mbetobong John - Sustainability Campaign Officer" class="h-40 cursor-pointer w-40 rounded-fiftyPercent">
+                    <p class="hidden about-person">Mbetobong John - Sustainability Campaign Officer</p>
+                    <p class="hidden about-snippet">                            
+                        I bring my passion for education, people 
+                        and planet to communicate sustainability 
+                        stories and drive awareness towards the 
+                        transition to a plastic-free world through 
+                        alternative eco-friendly solutions like ShoppersBag. It's particularly thrilling to be part of a team working to save the environment, improve livelihood and empower communities.
+                    </p>
+                    <p class="hidden about-linkedin">https://www.linkedin.com</p>
+                </div>
+                <div data-modal="about_modal" class="py-10 modal-opener">
+                    <img src="./assets/images/team/arit-etuk.png" alt="Arit Etuk - Research and Impact Lead" class="h-40 cursor-pointer w-40 rounded-fiftyPercent">
+                    <p class="hidden about-person">Arit Etuk - Research and Impact Lead</p>
+                    <p class="hidden about-snippet">                            
+                        ShoppersBag offers the possibility of deep 
+                        dive research on plant fibers usability to 
+                        create alternative packaging bags and materials 
+                        while also empowering women and girls. 
+                        Interestingly, my work gives me new insights on 
+                        raw material sourcing that promote sustainability 
+                        and save for the environment and how we can explore 
+                        them to provide eco-friendly alternatives to 
+                        single-use plastics. I can say; It's a story of 
+                        Impact. I'm enjoying the work and poised for the 
+                        challenges ahead.
+                    </p>
+                    <p class="hidden about-linkedin">https://www.linkedin.com</p>
+                </div>
+                <div data-modal="about_modal" class="py-10 modal-opener">
+                    <img src="./assets/images/team/precious-morgan.png" alt="Precious Morgan - EcoGirls Programmes" class="h-40 cursor-pointer w-40 rounded-fiftyPercent">
+                    <p class="hidden about-person">Precious Morgan - EcoGirls Programmes</p>
+                    <p class="hidden about-snippet">                            
+                        My work offers me an exciting opportunity 
+                        to see young girls transformed from under-served 
+                        girls to change makers. For me, it's a story of 
+                        impact, and a service of equipping young girls 
+                        to build resilience for common good.
+                    </p>
+                    <p class="hidden about-linkedin">https://www.linkedin.com</p>
+                </div>
+                <div data-modal="about_modal" class="py-10 modal-opener">
+                    <img src="./assets/images/team/vivian-nkanga.png" alt="Vivian Nkanga - Quality Control Officer" class="h-40 cursor-pointer w-40 rounded-fiftyPercent">
+                    <p class="hidden about-person">Vivian Nkanga - Quality Control Officer</p>
+                    <p class="hidden about-snippet">                            
+                        I keep an eye around ensuring that 
+                        every ShoppersBag is well crafted in 
+                        a fashionable manner to drive lifestyle 
+                        transformation, made with care, love and 
+                        detail, built to give our customers the 
+                        lasting quality and value they deserve.
+                    </p>
+                    <p class="hidden about-linkedin">https://www.linkedin.com</p>
+                </div>
+                <div data-modal="about_modal" class="py-10 modal-opener">
+                    <img src="./assets/images/team/blessing-blaise.png" alt="Blessing Blaise - Sales Lead" class="h-40 cursor-pointer w-40 rounded-fiftyPercent">
+                    <p class="hidden about-person">Blessing Blaise - Sales Lead</p>
+                    <p class="hidden about-snippet">                            
+                        As a result-driven sales personnel, I incorporate 
+                        my ability to meet and exceed sales targets into 
+                        promoting and marketing environmentally friendly 
+                        products like Shoppersbag, which are naturally 
+                        sourced and sustainable, to repeal harmful plastic 
+                        effects in the environment. Working with a team of 
+                        people who are passionate about environmental 
+                        sustainability is an exciting opportunity.
+                    </p>
+                    <p class="hidden about-linkedin">https://www.linkedin.com</p>
+                </div>
+                <section id="about_modal" class="hidden z-200 w-full h-full overflow-y-auto fixed top-0 left-0 flex-col items-center lg:justify-center">
+                    <div id="" data-modal-close="about_modal" class="overlay modal-closer bg-black/30 w-full h-full z-20 backdrop-blur-sm fixed top-0 left-0 cursor-pointer "> </div>
+                    <div class="z-50 mx-auto w-ninetyPercent sm:w-eightyPercent h-eightyPercent my-40 sm:h-fit max-w-xl shadow-xl rounded-fifty bg-white justify-center">
+                        <div class="relative bg-transparent rounded-fifty flex flex-row items-center">
+                        <img id="about_img_modal" src="./assets/images/team/Ellipse12.png" alt="member" class="absolute -top-20 left-fiftyPercent -translate-x-fiftyPercent md:-translate-x-0 md:top-auto md:-translate-y-auto md:-left-20 max-h-40 about-img cursor-pointer max-w-160px">
+                        <div class="block rounded-fifty h-full overflow-y-auto sm:h-auto w-full bg-white px-10 md:pl-24 md:pr-12 pt-24 pb-12 md:py-10 space-y-6">
+                            <h5 id="about_person_modal" class="text-2xl md:text-4xl font-avenirBlack leading-tight font-medium mb-2">Etia Nwaenang - CEO</h5>
+                            <p id="about_snippet_modal" class="font-avenirRegular text-black text-sm sm:text-base mb-4">
                             I oversee the day-to-day execution of the ShoppersBag's playbook to achieve a plastic-free society and lifestyle transformation. My experience cut across diverse sectors, arming me with the needed toolkits to co-create solutions that will grow the circular economy space and impact lives and communities. It's a marathon, I move.
                             </p>
-                            <div class=" inline-block px-6 py-2.5 rounded-ten bg-brandDarkGreen2x text-white font-medium text-xs leading-tight shadow-md hover:brandDarkGreen2x/70hover:shadow-lg space-x-2 focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0  active:shadow-lg transition duration-150 ease-in-out">
-                            <a href="#">View profile</a>
+                            <a id="about_linkedin_modal" href="#" class="flex flex-row w-fit items-center px-6 py-2.5 rounded-ten bg-brandDarkGreen2x text-white font-medium text-sm leading-tight shadow-md hover:brandDarkGreen2x/70 hover:shadow-lg gap-2 focus:bg-brandDarkGreen2x focus:shadow-lg focus:outline-none focus:ring-0  active:shadow-lg transition duration-150 ease-in-out">
+                            <p>View profile</p>
                             <img src="./assets/images/icons/brandico_linkedin-rect -white.svg" alt="" class="w-6 h-6 inline-block">
-                            </div>
+                            </a>
+                        </div>
                         </div>
                     </div>
-                </div>
-                <div class="py-10">
-                    <img src="./assets/images/team/Ellipse11.png" alt="member" class="max-h-40 cursor-pointer max-w-160px">
-                </div>
-                <div class="py-10">
-                    <img src="./assets/images/team/Ellipse10.png" alt="member" class="max-h-40 cursor-pointer max-w-160px">
-                </div>
-                <div class="py-10">
-                    <img src="./assets/images/team/Ellipse9.png" alt="member" class="max-h-40 cursor-pointer max-w-160px">
-                </div>
-                <div class="py-10">
-                    <img src="./assets/images/team/Ellipse8.png" alt="member" class="max-h-40 cursor-pointer max-w-160px">
-                </div>
-                <div class="py-10">
-                    <img src="./assets/images/team/Ellipse7.png" alt="member" class="max-h-40 cursor-pointer max-w-160px">
-                </div>
-                <div class="py-10">
-                    <img src="./assets/images/team/Ellipse6.png" alt="member" class="max-h-40 cursor-pointer max-w-160px">
-                </div>
+                </section>
             </div>
        </div>
        <div class="bg-brandYellow1x sm:px-5 py-5 sm:py-1 md:px-10 rounded-hundred flex flex-col md:flex-row items-center gap-5 md:gap-16">
@@ -266,6 +399,6 @@
     <!-- <script src="./assets/js/accordion_faq.js"></script> -->
     <script src="./assets/js/nav.js"></script>
     <script src="./assets/js/marquee.js"></script>
-    <script src="./assets/js/pop.js"></script>
+    <script src="./assets/js/modal.js"></script>
 </body>
 </html>
