--- a/contact-us.html
+++ b/contact-us.html
@@ -36,7 +36,7 @@
 <main>
     <section class="px-10 md:px-20 py-20 flex flex-col md:flex-row gap-20 md:gap-10">
         <div class="w-full md:w-fiftyPercent space-y-8 md:space-y-5">
-            <h1 class="text-black font-avenirHeavy text-6xl lg:text-7xl">Beautifully designed in Africa</h1>
+            <h1 class="text-black font-avenirHeavy text-5xl sm:text-6xl lg:text-7xl">Beautifully designed in Africa</h1>
             <p class="text-2xl font-avenirLight">
                 Founded in the entrepreneurial city of Lagos, ShoppersBag has become an exceptional African innovation — designed and built by a team of innovative people.
             </p>
@@ -47,7 +47,7 @@
         </div>
     </section>
     <section class="px-10 md:px-20 pb-10">
-        <main class="grid grid-cols-3 gap-5 md:gap-10">
+        <main class="grid sm:grid-cols-3 gap-5 md:gap-10">
             <div class="h-fit w-fit col-span-1">
                 <img src="./assets/images/contact-us/water.png" alt="">
             </div>
