--- a/blog.html
+++ b/blog.html
@@ -10,29 +10,29 @@
 </head>
 <body class="box-border overflow-x-hidden bg-brandGray3x">
 <header class="">
-    <nav class="relative w-full flex flex-row items-center h-24 lg:h-auto justify-between px-10 sm:px-16 lg:px-32 py-10">
-        <div class="h-fit w-thirtyPercent">
-            <a href="./index.html"><img src="./assets/images/logos/logo.png" alt="logo" class="w-40 h-auto lg:w-48"></a>
-        </div>
-        <div id="nav_menu" class="lg:bg-transparent space-y-10 lg:space-y-0 z-50 py-20 lg:py-0 -right-hundredPercent transition-all duration-500 ease-in-out shadow-md lg:shadow-none lg:static -bottom-560 absolute hidden w-full flex-col lg:flex lg:flex-row gap-10 lg:gap-7 xl:gap-10 justify-between items-center lg:w-seventyPercent">
-            <div class="font-avenirRegular flex flex-col lg:flex-row items-center gap-10 lg:gap-5 xl:gap-10">
-                <a href="./about-us.html" class="whitespace-nowrap">About us</a>
-                <a href="./faq.html" class="whitespace-nowrap">FAQ</a>
-                <a href="./impact.html" class="whitespace-nowrap">Impact</a>
-                <a href="./blog.html" class="whitespace-nowrap">Blog</a>
-                <a href="./contact-us.html" class="whitespace-nowrap">Contact Us</a>
+        <nav class="relative w-full flex flex-row items-center h-24 lg:h-auto justify-between px-10 sm:px-16 lg:px-32 py-10">
+            <div class="h-fit w-fiftyPercent lg:w-thirtyPercent">
+                <a href="./index.html"><img src="./assets/images/logos/logo.png" alt="logo" class="h-auto w-52 lg:w-48"></a>
             </div>
-            <div class="flex w-full lg:w-fit justify-center flex-col lg:flex-row items-center gap-7 font-avenirHeavy ">
-                <a href="#" class="whitespace-nowrap text-brandRed1x underline">Log In</a>
-                <a href="#" class="whitespace-nowrap bg-brandDarkGreen2x py-3 px-5 rounded-forty text-white text-center">Join as a business</a>
+            <div id="nav_menu" class="lg:bg-transparent space-y-10 lg:space-y-0 z-50 py-20 lg:py-0 -right-hundredPercent transition-all duration-500 ease-in-out shadow-md lg:shadow-none lg:static -bottom-560 absolute hidden w-full flex-col lg:flex lg:flex-row gap-10 lg:gap-7 xl:gap-10 justify-between items-center lg:w-seventyPercent">
+                <div class="font-avenirRegular flex flex-col lg:flex-row items-center gap-10 lg:gap-5 xl:gap-10">
+                    <a href="./about-us.html" class="whitespace-nowrap">About us</a>
+                    <a href="./faq.html" class="whitespace-nowrap">FAQ</a>
+                    <a href="./impact.html" class="whitespace-nowrap">Impact</a>
+                    <a href="./blog.html" class="whitespace-nowrap">Blog</a>
+                    <a href="./contact-us.html" class="whitespace-nowrap">Contact Us</a>
+                </div>
+                <div class="flex w-full lg:w-fit justify-center flex-col lg:flex-row items-center gap-7 font-avenirHeavy ">
+                    <a href="#" class="whitespace-nowrap text-brandRed1x underline">Log In</a>
+                    <a href="#" class="whitespace-nowrap bg-brandDarkGreen2x py-3 px-5 rounded-forty text-white text-center">Join as a business</a>
+                </div>
             </div>
-        </div>
-        <div id="hamburger" class="md:block lg:hidden space-y-1">
-            <div class="h-0.75 w-8 rounded-ten bg-brandDarkGreen1x"></div>
-            <div class="h-0.75 w-6 rounded-ten bg-brandDarkGreen1x"></div>
-        </div>
-    </nav>
-</header>
+            <div id="hamburger" class="md:block lg:hidden space-y-1">
+                <div class="h-0.75 w-8 rounded-ten bg-brandDarkGreen1x"></div>
+                <div class="h-0.75 w-6 rounded-ten bg-brandDarkGreen1x"></div>
+            </div>
+        </nav>
+    </header>
 <main>
     <section id="featured_blog" class="px-5 md:px-20 py-10 space-y-20">
         <div class="relative w-full mx-auto">
