--- a/about-us.html
+++ b/about-us.html
@@ -28,14 +28,14 @@
                 </div>
             </div>
             <div id="hamburger" class="md:block lg:hidden space-y-1">
-                <div class="h-0.75 w-8 rounded-ten bg-brandDarkGreen1x"></div>
-                <div class="h-0.75 w-6 rounded-ten bg-brandDarkGreen1x"></div>
+                <div class="ham-one h-0.75 w-8 rounded-ten bg-brandDarkGreen1x"></div>
+                <div class="ham-two transition-all duration-1000 ease-in-out h-0.75 w-6 rounded-ten bg-brandDarkGreen1x"></div>
             </div>
         </nav>
     </header>
 <main>
     <section class="px-5 sm:px-10 md:px-20 h-fit relative">
-        <main class="relative rounded-hundred bg-brandDarkGreen1x sm:px-10 lg:px-24 py-32  h-fit flex flex-col gap-6">
+        <main class="relative rounded-hundred bg-brandDarkGreen1x px-5 sm:px-10 lg:px-24 py-32  h-fit flex flex-col gap-6">
             <div class="space-y-6 text-center">
                 <h1 class="font-milligramBold700 text-white text-2xl sm:text-4xl md:text-5xl lg:text-7xl">
                     Promoting a sustainable environment
