--- a/impact.html
+++ b/impact.html
@@ -28,8 +28,8 @@
                 </div>
             </div>
             <div id="hamburger" class="md:block lg:hidden space-y-1">
-                <div class="h-0.75 w-8 rounded-ten bg-brandDarkGreen1x"></div>
-                <div class="h-0.75 w-6 rounded-ten bg-brandDarkGreen1x"></div>
+                <div class="ham-one h-0.75 w-8 rounded-ten bg-brandDarkGreen1x"></div>
+                <div class="ham-two transition-all duration-1000 ease-in-out h-0.75 w-6 rounded-ten bg-brandDarkGreen1x"></div>
             </div>
         </nav>
     </header>
@@ -130,11 +130,11 @@
     </section>
     <section class="px-10 md:px-20 pb-10 space-y-20">
         <div class="relative w-full mx-auto">
-            <div class="z-30 relative py-10 px-10 lg:px-16 mx-auto rounded-twenty bg-white w-full flex flex-row items-start gap-5">
-                <h1 class="font-avenirHeavy text-black text-2xl lg:text-3xl w-fortyPercent">
+            <div class="z-30 relative py-10 px-10 lg:px-16 mx-auto rounded-twenty bg-white w-full flex flex-col sm:flex-row items-start gap-5">
+                <h1 class="font-avenirHeavy text-black text-2xl lg:text-3xl w-eightyPercent sm:w-fortyPercent">
                     How we work with content creators
                 </h1>
-               <div class="space-y-3 w-sixtyPercent pr-5 md:pr-16 lg:pr-20">
+               <div class="space-y-3 w-full sm:w-sixtyPercent pr-5 md:pr-16 lg:pr-20">
                     <p class="font-avenirRegular text-black text-lg">
                         Storytellers have a role to play in the transition to a circular economy through leaning their voices to raise awareness about the negative impact of plastic wastes on our landfills and water bodies.
                     </p>
@@ -146,7 +146,7 @@
             <div class="absolute w-full bg-brandGray22x h-full rounded-twenty -left-2 -bottom-2"></div>
        </div>
         <div class="relative w-ninetyPercent md:w-eightyPercent lg:w-sixtyPercent mx-auto">
-            <div class="z-30 relative py-4 px-5 mx-auto rounded-fifty bg-white border border-black w-full flex flex-row items-center gap-2 md:gap-10 justify-between">
+            <div class="z-30 relative py-4 px-5 mx-auto rounded-fifty bg-white border border-black w-full flex flex-col sm:flex-row items-center gap-5 md:gap-10 justify-between">
                 <p class="font-avenirRegular text-black md:text-lg">
                     Naija Zero Plastic Challenge 2022 Report
                 </p>
