--- a/contact-us.html
+++ b/contact-us.html
@@ -28,8 +28,8 @@
                 </div>
             </div>
             <div id="hamburger" class="md:block lg:hidden space-y-1">
-                <div class="h-0.75 w-8 rounded-ten bg-brandDarkGreen1x"></div>
-                <div class="h-0.75 w-6 rounded-ten bg-brandDarkGreen1x"></div>
+                <div class="ham-one h-0.75 w-8 rounded-ten bg-brandDarkGreen1x"></div>
+                <div class="ham-two transition-all duration-1000 ease-in-out h-0.75 w-6 rounded-ten bg-brandDarkGreen1x"></div>
             </div>
         </nav>
     </header>
