spacing and overflow

--- a/blog.html
+++ b/blog.html
@@ -33,7 +33,7 @@
             </div>
         </nav>
     </header>
-<main>
+<main class="overflow-x-hidden">
     <section id="featured_blog" class="px-5 md:px-20 py-10 space-y-20">
         <div class="relative w-full mx-auto">
             <div class="z-30 relative py-10 px-5 sm:px-10 lg:px-16 mx-auto rounded-twenty bg-white w-full flex flex-col md:flex-row items-start gap-5">
