--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
             </div>
         </nav>
     </header>
-<main>
-
+<main class="overflow-x-hidden">
     <section class="px-5 sm:px-10 md:px-20 mb-40 h-fit relative">
         <main class="relative rounded-hundred bg-brandDarkGreen1x px-10 lg:px-24 pt-32 lg:py-32  h-fit flex flex-col gap-6">
             <div class="space-y-6">
