--- a/blog-post.html
+++ b/blog-post.html
@@ -33,7 +33,7 @@
             </div>
         </nav>
     </header>
-<main>
+<main class="overflow-x-hidden">
     <section id="blog_post_expanded" class="px-10 md:px-20 py-10 space-y-20">
         <div class="w-full mx-auto flex items-start flex-col gap-5 md:gap-10 lg:flex-row">
             <div class="space-y-3 flex flex-row pb-5 md:pb-0 gap-5 items-center w-full lg:w-twentyFivePercent">
