--- a/contact-us.html
+++ b/contact-us.html
@@ -33,7 +33,7 @@
             </div>
         </nav>
     </header>
-<main>
+<main class="overflow-x-hidden">
     <section class="px-10 md:px-20 py-20 flex flex-col md:flex-row gap-20 md:gap-10">
         <div class="w-full md:w-fiftyPercent space-y-8 md:space-y-5">
             <h1 class="text-black font-avenirHeavy text-5xl sm:text-6xl lg:text-7xl">Beautifully designed in Africa</h1>
