impact lg fully responsive

--- a/impact.html
+++ b/impact.html
@@ -57,7 +57,7 @@
               <section class="hero-section pt-3 pb-5 my-5 position-relative">
 
                   <div class="row mt-xl-5 mt-lg-5">
-                    <div class="col-9 offset-3 ">
+                    <div class="col-9 offset-3  col-lg-10 offset-lg-3">
                         <h1 class="hero-text--heading fw-bolder display-5 text-white ">Working with <span>Women</span></h1>
                         <div class="hero-text--body">
                           <p class=" text-white mt-3 women-text ">HerFiber project is tailored to train and support women groups in banana and plantain growing communities, integrate them into clusters to extract fiber from banana and plantain stems to yarn, weaving into fabric for eco-friendly packaging bag production.
@@ -83,8 +83,8 @@
                       
                     </div>
                   </div>
-                  <div class="row">
-                    <div class="col-9 offset-3 ">
+                  <div class="row mt-xl-5 mt-lg-5 row-2">
+                    <div class="col-9 offset-3 col-lg-10 offset-lg-3 ">
                         <h1 class="hero-text--heading fw-bolder display-5 text-white ">Working with <span>Girls</span></h1>
                         <div class="hero-text--body">
                           <p class=" text-white mt-3 women-text ">Eco-Girls support scheme is designed to train, equip and empower girls with practical bag design and making skills using recyclable and biodegradable materials. 
@@ -98,7 +98,7 @@
                             </div> 
                             <div class="engaged text-white text-end">
                               <p class="fw-bold ">3,000</p>
-                              <span  class="">Number of Girls impacted  </span>
+                              <span  class=" text-end">Number of Girls impacted  </span>
                             </div>
                           </div>
                         </div>
@@ -127,7 +127,7 @@
               <section class="narrative-slider">
                 <div class="row">
                   <div class="col-10 offset-2 col-lg-12 offset-lg-0">
-                    <h3 class="slider-title">Narrative Building </h3>
+                    <h3 class="slider-title ">Narrative Building </h3>
                   </div>
                 </div>
                 <div class="slider-main mb-lg-5 mb-0 p-4">
