mvp state ready

--- a/contact.html
+++ b/contact.html
@@ -126,12 +126,12 @@
                 <div class="col-sm-12 col-xl-3 offset-xl-1 offset-sm-0 col-6 offset-1 mt-sm-0 mt-2">
                     <h4 class="text-capitalize footer-heading">reach us</h4>
                     <div class="social d-flex  my-2">
-                        <a href=""><img src="./assets/images/linkedin.svg" alt="" class="pe-2"></a>
-                        <a href=""><img src="./assets/images/twitter.svg" alt="" class="social-icon px-2"></a>
-                        <a href=""><img src="./assets/images/instagram.svg" alt="" class="social-icon px-2"></a>
-                        <a href=""><img src="./assets/images/facebook.svg" alt="" class="social-icon px-2"></a>
+                        <a href="https://www.linkedin.com/company/shopperbagng/"><img src="./assets/images/linkedin.svg" alt="" class="pe-sm-2 pe-md-2 pe-lg-2 pe-1"></a>
+                        <a href="https://twitter.com/shoppersbagng?s=11&t=yLO79mofzBfCOcArRX60Ag"><img src="./assets/images/twitter.svg" alt="" class="social-icon px-sm-2 px-lg-2"></a>
+                        <a href="https://instagram.com/shoppersbagnigeria?igshid=YmMyMTA2M2Y="><img src="./assets/images/instagram.svg" alt="" class="social-icon px-sm-2 px-lg-2"></a>
+                        <a href="https://www.facebook.com/ShoppersbagNG"><img src="./assets/images/facebook.svg" alt="" class="social-icon px-sm-2 px-lg-2"></a>
                     </div>
-                    <span class="reach-out d-inline-block">For grievances, contact<a href="" class="sustainable"> info@wellofscience.com</a></span>
+                    <span class="reach-out d-inline-block">For grievances, contact<a href="" class="sustainable"> ihello@shoppersbag.co </a></span>
                     <span class="reach-out d-inline-block">Phone: 08064657872, 07030207123</span>
                     <span class="reach-out d-inline-block">Get ShoppersBag App on</span>
                     <div class="download-app ">
