shoppersbag ready or live push

--- a/blog.html
+++ b/blog.html
@@ -64,15 +64,15 @@
                                 <div class="custom-card--im">
                                     <img src="./assets/images/avatar-13.png" alt="" class="custom-card--img">
                                 </div>
-                                <div class="custom-card--title mt-lg-4 mt-2">
+                                <div class="custom-card--title mt-lg-4 mt-2 ms-md-4 ms-sm-4 ms-4">
                                     <h6 class="text-lg-center ">Precious Tom</h6>
                                 </div>
-                                <div class="custom-card--text ">
+                                <div class="custom-card--text ms-md-4 ms-sm-4 ms-4">
                                     <h6 class="text-lg-center"><small class="">Read time: <span class="text-secondar custom-card--text-1"> 2 min</span></small></h6>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-8 offset-lg-1 col-12 offset-0 px-4">
+                        <div class="col-lg-8 offset-lg-2 col-12 offset-0 px-4">
                             <h1 class="blog-hero-text--heading fw-bolder display-5 text-dar mt-2 mt-md-4">Permanent Solution to Plastic Waste on <span class="shadow">Earth</span></h1>
                             <p class="hero-text--body text-start text-secondar  pt-3 fs-5">
                                 Eco-Girls support scheme is designed to train, equip and empower girls with practical bag design and making skills using recyclable and biodegradable materials. Eco-Girls support scheme is designed to train, equip and empower girls with practical bag design and making skills using recyclable and biodegradable materials.
