--- a/faq.html
+++ b/faq.html
@@ -378,7 +378,7 @@
 
 
             <div class="row">
-              <div class="col-lg-8 offset-lg-4 col-10 offset-2 col-sm-10 offset-sm-3 col-md-8  position-relative">
+              <div class="col-lg-8 offset-lg-4 col-xl-6 offset-xl-3 col-10 offset-1 col-sm-8 offset-sm-2 col-md-8  position-relative">
                 
                   <img src="./assets/images/faq-more.svg" alt="" class="other-question">
                 
