--- a/impact.html
+++ b/impact.html
@@ -84,7 +84,7 @@
                     </div>
                   </div>
                   <div class="row mt-xl-5 mt-lg-5 mt-md-5 mt-sm-5 mt-5 row-2">
-                    <div class="col-12 offset-1  col-lg-10 offset-lg-2 col-md-9 offset-md-2 col-sm-10 offset-sm-1">
+                    <div class="col-12 offset-1  col-lg-10 offset-lg-2  col-xl-10 offset-xl-3 col-md-9 offset-md-2 col-sm-10 offset-sm-1">
                         <h1 class="hero-text--heading fw-bolder display-5 text-white w-75 w-sm-100 w-md-100 w-lg-100 w-xl-100">Working with <span>Girls</span></h1>
                         <div class="hero-text--body">
                           <p class=" text-white mt-3 women-text ">Eco-Girls support scheme is designed to train, equip and empower girls with practical bag design and making skills using recyclable and biodegradable materials. 
