--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                               </div>
                         </div>
                         <div class="col-xl-6 offset-xl-1 col-10 offset-1 col-lg-6 offset-lg-1 col-sm-12 col-md-5 offset-md-0 position-relative">
-                            <div class="ellipse d-none ">
+                            <div class="ellipse">
                            
                            
                                 <div class="tab-content " id="v-pills-tabContent">
@@ -374,7 +374,7 @@
                               </div>
                         </div>
                         <div class="col-xl-6 offset-xl-1 col-10 offset-1 col-lg-6 offset-lg-1 col-sm-12 col-md-5 offset-md-0  position-relative">
-                            <div class="ellipse d-none ">
+                            <div class="ellipse  ">
                                 <div class="tab-content " id="v-pills-tabContent">
                                     <div class="tab-pane fade show active" id="v-pills-sustain" role="tabpanel" aria-labelledby="v-pills-sustain-tab">
                                         <img src="./assets/images/how-shopper-work/for-brands/1.png" alt="" class="shoppers ms-md-5 ms-lg-1">
