final carousel changes comfirm ready for live push, nav now togglig

--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@
     <!-- <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css"> -->
     <!-- <script src="./node_modules/@popperjs/core/dist/umd/popper.min.js"></script> -->
     <!-- <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script> -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="./assets/bootstrap/bootstrap-5.2.0-dist/js/bootstrap.bundle.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js"></script> -->
+    
+    <!-- <script src="./assets/bootstrap/bootstrap-5.2.0-dist/js/bootstrap.min.js"></script> -->
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
+
 
     <!-- CDN -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
@@ -26,7 +31,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"> 
-    <link rel="stylesheet" href="./assets/bootstrap/bootstrap-5.2.0-dist/css/bootstrap.min.css">       
+    <!-- <link rel="stylesheet" href="./assets/bootstrap/bootstrap-5.2.0-dist/css/bootstrap.min.css">        -->
     <title>Home</title>
 </head>
 <body>
@@ -40,8 +45,7 @@
               <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav mx-auto">
                   <a class="nav-link custom__nav-link text-capitalize active" aria-current="page" href="about.html">About us</a>
-                  <a class="nav-link custom__nav-link ms-4" href="faq.html">FAQ</a>
-                  <!-- <a class="nav-link custom__nav-link ms-4" href="partners.html">Partners</a> -->
+                  <a class="nav-link custom__nav-link ms-4" href="faq.html">FAQ</a> 
                   <a class="nav-link custom__nav-link ms-4 text-capitalize" href="impact.html">Impact</a>
                   <a class="nav-link custom__nav-link ms-4 text-capitalize"  href="blog.html">Blog</a>
                   <a class="nav-link custom__nav-link ms-4 text-capitalize"  href="contact.html">Contact us</a>
@@ -50,6 +54,31 @@
               </div>
             </div>
         </nav>
+      
+            <div class="container-fluid">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <a class="navbar-brand" href="#">Navbar</a>
+              <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Link</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link disabled">Disabled</a>
+                  </li>
+                </ul>
+                <form class="d-flex" role="search">
+                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                  <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+              </div>
+            </div>
+          </nav> -->
     </header>
     <main>
         <div class="container">
