--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-whit mt-4 mb-5">
+        <nav class="navbar fixed-top navbar-expand-lg bg-white py-3 mb-5">
             <div class="container">
               <a class="navbar-brand " href="index.html"><img src="./assets/images/logo-brand.svg" width="250" alt="" class="ms-0 ms-sm-5"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -57,7 +57,7 @@
     </header>
     <main>
         <div class="container">
-              <section class="contact-hero-section pt-3 pb-5 my-5 position-relative">
+              <section class="contact-hero-section pt-3 pb-5  position-relative">
                 <div class="row d-flex flex-column-reverse d-md-flex flex-md-row align-items-md-center">
                     <div class="col-sm-12 col-md-6 offset-md-0 col-lg-6 offset-lg-0  col-12 mt-5">
                         <h1 class="   contact-hero-title">Beautifully designed in  Africa</h1>
