--- a/about.html
+++ b/about.html
@@ -14,7 +14,8 @@
     <!-- <script src="./node_modules/@popperjs/core/dist/umd/popper.min.js"></script> -->
     <!-- <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="./assets/bootstrap/bootstrap-5.2.0-dist/js/bootstrap.bundle.js"></script>
+    <!-- <script src="./assets/bootstrap/bootstrap-5.2.0-dist/js/bootstrap.bundle.min.js"></script> -->
+   
 
     <!-- CDN -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
@@ -40,7 +41,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-whit mt-4 mb-5">
+        <nav class="navbar fixed-top navbar-expand-lg bg-white py-3 mb-5">
             <div class="container">
               <a class="navbar-brand " href="index.html"><img src="./assets/images/logo-brand.svg" width="250" alt="" class="ms-0 ms-sm-5"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -50,7 +51,6 @@
                 <div class="navbar-nav mx-auto">
                   <a class="nav-link custom__nav-link text-capitalize active" aria-current="page" href="about.html">About us</a>
                   <a class="nav-link custom__nav-link ms-4" href="faq.html">FAQ</a>
-                  <!-- <a class="nav-link custom__nav-link ms-4" href="partners.html">Partners</a> -->
                   <a class="nav-link custom__nav-link ms-4 text-capitalize" href="impact.html">Impact</a>
                   <a class="nav-link custom__nav-link ms-4 text-capitalize"  href="blog.html">Blog</a>
                   <a class="nav-link custom__nav-link ms-4 text-capitalize"  href="contact.html">Contact us</a>
@@ -404,7 +404,7 @@
                 <div class="owl-carousel owl-theme d-lg-none d-block">
                     <div class="item" >
                         <div class="card" style="width: 100; height:400px; border: 1px solid #845CA7; font-family: 'Avenir',san-serif;">
-                            <img src="./assets/images/team-1.png" class="card-img-top w-75 mx-auto mt-3" alt="...">
+                            <img src="./assets/images/team-1.png" class="card-img-top w-50 mx-auto mt-3" alt="...">
                             <div class="card-body" style="height: 80;">
                               <h5 class="card-title " style="font-size: .8rem; font-weight:600; height:25;">Etia Nwaenang - CEO</h5>
                               <p class="card-text" style="font-size: .8rem; height: 40;" >I oversee the day-to-day execution of the ShoppersBag's playbook to achieve a plastic-free society and lifestyle transformation.</p>
@@ -414,7 +414,7 @@
                     </div>
                     <div class="item" >
                         <div class="card" style="width: 100; height:400px; border: 1px solid #845CA7; font-family: 'Avenir',san-serif;">
-                            <img src="./assets/images/team-6.png" class="card-img-top w-75 mx-auto mt-3" alt="...">
+                            <img src="./assets/images/team-6.png" class="card-img-top w-50 mx-auto mt-3" alt="...">
                             <div class="card-body" style="height: 80;">
                               <h5 class="card-title " style="font-size: .8rem; font-weight:600; height:25;">Gabriel Edward- Data Analytics and Protection Officer</h5>
                               <p class="card-text" style="font-size: .8rem; height: 40;" >I wear the social lenses from whence the world sees ShoppersBag, daily projecting messages that reflect our brand.</p>
@@ -424,7 +424,7 @@
                     </div>
                     <div class="item" >
                         <div class="card" style="width: 100; height:400px; border: 1px solid #845CA7; font-family: 'Avenir',san-serif;">
-                            <img src="./assets/images/team-2.png" class="card-img-top w-75 mx-auto mt-3" alt="...">
+                            <img src="./assets/images/team-2.png" class="card-img-top w-50 mx-auto mt-3" alt="...">
                             <div class="card-body" style="height: 80;">
                               <h5 class="card-title " style="font-size: .8rem; font-weight:600; height:25;">Akan Ebong - Media and Communication Lead</h5>
                               <p class="card-text" style="font-size: .8rem; height: 30;" >My turf is developing media and strengthening communication assets for ShoppersBag, As a global brand. </p>
@@ -434,7 +434,7 @@
                     </div>
                     <div class="item" >
                         <div class="card" style="width: 100; height:400px; border: 1px solid #845CA7; font-family: 'Avenir',san-serif;">
-                            <img src="./assets/images/team-3.png" class="card-img-top w-75 mx-auto mt-3" alt="...">
+                            <img src="./assets/images/team-3.png" class="card-img-top w-50 mx-auto mt-3" alt="...">
                             <div class="card-body" style="height: 80;">
                               <h5 class="card-title " style="font-size: .8rem; font-weight:600; height:25;"> Mbetobong John - Sustainability Campaign Officer</h5>
                               <p class="card-text" style="font-size: .8rem; height: 40;" >I bring my passion for education, people and planet to communicate sustainability stories and drive awareness.  </p>
@@ -444,7 +444,7 @@
                     </div>
                     <div class="item" >
                         <div class="card" style="width: 100; height:400px; border: 1px solid #845CA7; font-family: 'Avenir',san-serif;">
-                            <img src="./assets/images/team-5.png" class="card-img-top w-75 mx-auto mt-3" alt="...">
+                            <img src="./assets/images/team-5.png" class="card-img-top w-50 mx-auto mt-3" alt="...">
                             <div class="card-body" style="height: 80;">
                               <h5 class="card-title " style="font-size: .8rem; font-weight:600; height:25;">Arit Etuk- Research and Impact Lead</h5>
                               <p class="card-text" style="font-size: .8rem; height: 40;" >I oversee the day-to-day execution of the ShoppersBag's playbook to achieve a plastic-free society and lifestyle transformation.</p>
@@ -455,7 +455,7 @@
                     </div>
                     <div class="item" >
                         <div class="card" style="width: 100; height:400px; border: 1px solid #845CA7; font-family: 'Avenir',san-serif;">
-                            <img src="./assets/images/team-4.png" class="card-img-top w-75 mx-auto mt-3" alt="...">
+                            <img src="./assets/images/team-4.png" class="card-img-top w-50 mx-auto mt-3" alt="...">
                             <div class="card-body" style="height: 80;">
                               <h5 class="card-title " style="font-size: .8rem; font-weight:600; height:25;">Ubong Inyang - COO</h5>
                               <p class="card-text" style="font-size: .8rem; height: 40;" >I am always on the lookout for how we can weave ShoppersBag across different value chains. My menu list includes Operations, Strategy, Innovation and Funding.</p>
@@ -466,7 +466,7 @@
                     </div>
                     <div class="item" >
                         <div class="card" style="width: 100; height:400px; border: 1px solid #845CA7; font-family: 'Avenir',san-serif;">
-                            <img src="./assets/images/team-7.png" class="card-img-top w-75 mx-auto mt-3" alt="...">
+                            <img src="./assets/images/team-7.png" class="card-img-top w-50 mx-auto mt-3" alt="...">
                             <div class="card-body" style="height: 80;">
                               <h5 class="card-title " style="font-size: .8rem; font-weight:600; height:25">Judith Obinna - Administrative Officer</h5>
                               <p class="card-text" style="font-size: .8rem; height: 40;" >I oversee the day-to-day execution of the ShoppersBag's playbook to achieve a plastic-free society and lifestyle transformation.</p>
@@ -567,7 +567,7 @@
         $(document).ready(function() {
           $('.owl-carousel').owlCarousel({
             loop: true,
-            margin: 30,
+            margin: 10,
             responsiveClass: true,
             responsive: {
               0: {
