--- a/faq.html
+++ b/faq.html
@@ -33,7 +33,7 @@
 <body>
   
   <header>
-    <nav class="navbar navbar-expand-lg bg-whit mt-4 mb-5">
+    <nav class="navbar fixed-top navbar-expand-lg bg-white py-3 mb-5">
         <div class="container">
           <a class="navbar-brand " href="index.html"><img src="./assets/images/logo-brand.svg" width="250" alt="" class="ms-0 ms-sm-5"></a>
           <button class="navbar-toggler border-2 border-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -378,14 +378,14 @@
 
 
             <div class="row">
-              <div class="col-lg-8 offset-lg-4 col-xl-6 offset-xl-3 col-10 offset-1 col-sm-8 offset-sm-2 col-md-8  position-relative">
+              <div class="col-lg-8 offset-lg-2 col-xl-6 offset-xl-3 col-10 offset-1 col-sm-8 offset-sm-2 col-md-8  position-relative">
                 
                   <img src="./assets/images/faq-more.svg" alt="" class="other-question">
                 
               </div>
             </div>
             <div class="row mt-lg-1">
-              <div class="col-12 col-lg-8 offset-lg-2">
+              <div class="col-12 col-lg-9 offset-lg-2">
                 <div>
 
                   <article class="mt-lg-1 text-center">
