--- a/impact.html
+++ b/impact.html
@@ -32,7 +32,7 @@
 </head>
 <body>
     <header>
-      <nav class="navbar navbar-expand-lg bg-white mt-4 mb-5">
+      <nav class="navbar fixed-top navbar-expand-lg bg-white py-3 mb-5">
           <div class="container">
             <a class="navbar-brand " href="index.html"><img src="./assets/images/logo-brand.svg" width="250" alt="" class="ms-0 ms-sm-5"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -54,7 +54,7 @@
     </header>
     <main>
         <div class="container">
-              <section class="hero-section pt-3 pb-5 my-5 position-relative ">
+              <section class="hero-section pt-3 pb-5  position-relative impact-section ">
 
                   <div class="row mt-xl-5 mt-lg-5 mt-md-5 mt-sm-5 mt-5 ">
                     <div class="col-12 offset-1   col-xl-10 offset-xl-3  col-lg-10 offset-lg-2 col-md-9 offset-md-2 col-sm-10 offset-sm-1">
