every ui changes implemented

--- a/impact.html
+++ b/impact.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="./assets/css/impact.css">
     <link rel="stylesheet" href="./assets/css/contact.css">
     <link rel="stylesheet" href="./assets/css/about.css">
+    <link rel="shortcut icon" href="./assets/images/logos/logo-round.png" type="image/x-icon">
+
     <!-- LOCAL -->
     <!-- <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css"> -->
     <!-- <script src="./node_modules/@popperjs/core/dist/umd/popper.min.js"></script> -->
@@ -32,7 +34,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"> 
     <link rel="stylesheet" href="./assets/bootstrap/bootstrap-5.2.0-dist/css/bootstrap.min.css">       
-    <title>Impact</title>
+    <title>ShopperBag | Impact</title>
 </head>
 <body>
     <header>
