--- a/about.html
+++ b/about.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="./assets/css/impact.css">
     <link rel="stylesheet" href="./assets/css/contact.css">
     <link rel="stylesheet" href="./assets/css/about.css">
+    <link rel="shortcut icon" href="./assets/images/logos/logo-round.png" type="image/x-icon">
+
     <!-- LOCAL -->
     <!-- <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css"> -->
     <!-- <script src="./node_modules/@popperjs/core/dist/umd/popper.min.js"></script> -->
@@ -41,7 +43,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/bootstrap/bootstrap-5.2.0-dist/css/bootstrap.min.css">       
     
-    <title>About</title>
+    <title>ShoppersBag | About</title>
 </head>
 <body>
     <header>
@@ -282,7 +284,7 @@
                         </div>
 
                         <div class="col-lg">
-                            <img src="/assets/images/team-7.png" alt="" id="member-4" class="avatar align-self-end ">
+                            <img src="./assets/images/team-7.png" alt="" id="member-4" class="avatar align-self-end ">
 
                             <div class="ceo-card member-4">
                                 <div class="row">
@@ -291,7 +293,7 @@
                                         <div class="card mb-3 rounded-4 py-1 ">
                                             <div class="row g-0">
                                             <div class="col-md-3 position-relative">
-                                                <img src="/assets/images/team-7.png" alt="" class="avatar-hover img-fluid rounded-start" >
+                                                <img src="./assets/images/team-7.png" alt="arit" class="avatar-hover img-fluid rounded-start" >
             
                                             </div>
                                             <div class="col-md-8">
